# anime-recsys

./: .gitignore  .pre-commit-config.yaml  README.md  data.dvc  models.dvc  pyproject.toml
.dvc/: config
.github/workflows/: pre-commit.yml
anime-recsys/: callbacks.py  dataloader.py  infer.py  model.py  preprocess.py  train.py
configs/: config.yaml  prod-config.yaml
notebooks/: pokeGAN.ipynb
