[tool.poetry]
name = "tele-poke-gan"
version = "0.1.0"
description = ""
authors = ["Daniil <ksusonic@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
black = "^23.12.1"
ruff = "^0.1.9"
pytest = "^7.4.3"
pre-commit = "^3.6.0"
torch = ">=2.0.0, !=2.0.1, !=2.1.0"
jupyter = "^1.0.0"
torchvision = "^0.16.2"
matplotlib = "^3.8.2"
numpy = "^1.26.3"
tqdm = "^4.66.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
skip-string-normalization = true
line-length = 120

[tool.ruff]
# Same as Black.
line-length = 120

exclude = []
select = [
    "E", # pycodestyle errors (settings from FastAPI, thanks, @tiangolo!)
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "C", # flake8-comprehensions
    "B", # flake8-bugbear
]
ignore = [
    "E501", # line too long, handled by black
    "C901", # too complex
]

[tool.ruff.isort]
order-by-type = true
relative-imports-order = "closest-to-furthest"
extra-standard-library = ["typing"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
known-first-party = []
